force-app/main/default/objects/Asset_Service__c/Asset_Service__c.object-meta.xml
<CustomObject>
    <label>Asset Service</label>
    <nameField>
        <label>Asset Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>