force-app/main/default/objects/Asset_Service__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>