force-app/main/default/objects/Asset_Service__c/fields/Asset_Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Service_Number__c</fullName>
    <label>Asset Service Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>