force-app/main/default/objects/Asset_Service__c/fields/AssetServiceRegarding__c.field-meta.xml
<CustomField>
    <fullName>AssetServiceRegarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Service Regarding</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>