force-app/main/default/objects/Asset_Service__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Device Service</fullName>
            </value>
            <value>
                <fullName>Medical - Non SME</fullName>
            </value>
            <value>
                <fullName>Medical Adverse Effect - Do not Service</fullName>
            </value>
            <value>
                <fullName>Medical No Adverse Effect</fullName>
            </value>
            <value>
                <fullName>Non-Medical</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Warehouse/Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>