force-app/main/default/objects/Asset_Service__c/fields/ComplaintCodes__c.field-meta.xml
<CustomField>
    <fullName>ComplaintCodes__c</fullName>
    <label>Complaint Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001 Rotor will not turn</fullName>
            </value>
            <value>
                <fullName>002 Rotor noise</fullName>
            </value>
            <value>
                <fullName>004 Stuck roller on rotor</fullName>
            </value>
            <value>
                <fullName>006 Rotor Damaged</fullName>
            </value>
            <value>
                <fullName>007 Rotor loose</fullName>
            </value>
            <value>
                <fullName>09A Rotor - verbiage required</fullName>
            </value>
            <value>
                <fullName>09J Rotor not seated</fullName>
            </value>
            <value>
                <fullName>011 Motor will not turn</fullName>
            </value>
            <value>
                <fullName>012 Motor noise</fullName>
            </value>
            <value>
                <fullName>052 Pump case broken</fullName>
            </value>
            <value>
                <fullName>055 Pole clamp broken/stripped</fullName>
            </value>
            <value>
                <fullName>082 Battery access panel damaged</fullName>
            </value>
            <value>
                <fullName>52G Pump case broken - front</fullName>
            </value>
            <value>
                <fullName>52H Pump case broken - rear</fullName>
            </value>
            <value>
                <fullName>54A Excessive spillage - verbiage necessary</fullName>
            </value>
            <value>
                <fullName>55A Broke pole clamp knob</fullName>
            </value>
            <value>
                <fullName>55B Pole clamp loose</fullName>
            </value>
            <value>
                <fullName>59A Pump case - verbiage required</fullName>
            </value>
            <value>
                <fullName>59L Rattle inside pump</fullName>
            </value>
            <value>
                <fullName>59M Infested</fullName>
            </value>
            <value>
                <fullName>021* Shock</fullName>
            </value>
            <value>
                <fullName>022 On/Off switch cannot turn off</fullName>
            </value>
            <value>
                <fullName>023 Damanged cord</fullName>
            </value>
            <value>
                <fullName>024 Fuse</fullName>
            </value>
            <value>
                <fullName>025 Power shuts off while running</fullName>
            </value>
            <value>
                <fullName>093 No power</fullName>
            </value>
            <value>
                <fullName>21E Electrical short</fullName>
            </value>
            <value>
                <fullName>21F* Overheats</fullName>
            </value>
            <value>
                <fullName>21L* Sparking and/or Arcing</fullName>
            </value>
            <value>
                <fullName>21M* Smoke and/or Fire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>