force-app/main/default/objects/Asset_Service__c/fields/ContactEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailAddress__c</fullName>
    <formula>AssetServiceRegarding__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>