force-app/main/default/objects/Asset_Service__c/fields/ContactMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactMobileNumber__c</fullName>
    <formula>AssetServiceRegarding__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile Number</label>
    <type>Text</type>
</CustomField>