force-app/main/default/objects/Asset_Service__c/fields/DateofIncident__c.field-meta.xml
<CustomField>
    <fullName>DateofIncident__c</fullName>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>