force-app/main/default/objects/Asset_Service__c/fields/FiletoTrackwise__c.field-meta.xml
<CustomField>
    <fullName>FiletoTrackwise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File to Trackwise</label>
    <type>Checkbox</type>
</CustomField>