force-app/main/default/objects/Asset_Service__c/fields/InformationSource__c.field-meta.xml
<CustomField>
    <fullName>InformationSource__c</fullName>
    <label>Information Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dietian</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Family/Friends</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Third Party Comp / Serv. Prov</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>