force-app/main/default/objects/Asset_Service__c/fields/LocalClassification__c.field-meta.xml
<CustomField>
    <fullName>LocalClassification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Classification by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>