force-app/main/default/objects/Asset_Service__c/fields/LocalClassificationDate__c.field-meta.xml
<CustomField>
    <fullName>LocalClassificationDate__c</fullName>
    <label>Local Classification Date</label>
    <type>Date</type>
</CustomField>