force-app/main/default/objects/Asset_Service__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>