force-app/main/default/objects/Asset_Service__c/fields/OutOfBoxFailure__c.field-meta.xml
<CustomField>
    <fullName>OutOfBoxFailure__c</fullName>
    <label>Out of Box Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>