force-app/main/default/objects/Asset_Service__c/fields/ProblemAnalysis__c.field-meta.xml
<CustomField>
    <fullName>ProblemAnalysis__c</fullName>
    <label>Problem Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>