force-app/main/default/objects/Asset_Service__c/fields/ProblemComponent__c.field-meta.xml
<CustomField>
    <fullName>ProblemComponent__c</fullName>
    <label>Problem Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-product</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>