force-app/main/default/objects/Asset_Service__c/fields/ProductReplacementRequired__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacementRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Replacement Required</label>
    <type>Checkbox</type>
</CustomField>