force-app/main/default/objects/Asset_Service__c/fields/ProductReplacementStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductReplacementStatus__c</fullName>
    <label>Product Replacement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>