force-app/main/default/objects/Asset_Service__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Service</fullName>
            </value>
            <value>
                <fullName>Asset No Longer Required</fullName>
            </value>
            <value>
                <fullName>No Information Provided</fullName>
            </value>
            <value>
                <fullName>Defect Reported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>