force-app/main/default/objects/Asset_Service__c/fields/ReasonForNonSubmission__c.field-meta.xml
<CustomField>
    <fullName>ReasonForNonSubmission__c</fullName>
    <label>Reason for Non-Submission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>