force-app/main/default/objects/Asset_Service__c/fields/ReportingMedia__c.field-meta.xml
<CustomField>
    <fullName>ReportingMedia__c</fullName>
    <label>Reporting Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>No information provided</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>