force-app/main/default/objects/Asset_Service__c/fields/ReturnLocation__c.field-meta.xml
<CustomField>
    <fullName>ReturnLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Asset Services</relationshipLabel>
    <relationshipName>Asset_Services</relationshipName>
    <type>Lookup</type>
</CustomField>