force-app/main/default/objects/Asset_Service__c/fields/ReviewAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ReviewAccuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review for Accuracy</label>
    <type>Checkbox</type>
</CustomField>