force-app/main/default/objects/Asset_Service__c/fields/ReviewedDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewedDate__c</fullName>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>