force-app/main/default/objects/Asset_Service__c/fields/SentRegAuthority__c.field-meta.xml
<CustomField>
    <fullName>SentRegAuthority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Reg. Authority</label>
    <type>Checkbox</type>
</CustomField>