force-app/main/default/objects/Asset_Service__c/fields/SME_Disposition__c.field-meta.xml
<CustomField>
    <fullName>SME_Disposition__c</fullName>
    <label>SME Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not allow Analysis nor Repair</fullName>
            </value>
            <value>
                <fullName>Allow only Analysis but not Repair</fullName>
            </value>
            <value>
                <fullName>Allow Analysis and Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>