force-app/main/default/objects/Asset_Service__c/fields/SMECloseOffBy__c.field-meta.xml
<CustomField>
    <fullName>SMECloseOffBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME Close-off by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>