force-app/main/default/objects/Asset_Service__c/fields/SMECloseOffDate__c.field-meta.xml
<CustomField>
    <fullName>SMECloseOffDate__c</fullName>
    <label>SME Close Off Date</label>
    <type>Date</type>
</CustomField>