force-app/main/default/objects/Asset_Service__c/fields/SMEComments__c.field-meta.xml
<CustomField>
    <fullName>SMEComments__c</fullName>
    <label>SME Comments</label>
    <type>TextArea</type>
</CustomField>