force-app/main/default/objects/Asset_Service__c/fields/SMEConfirmed__c.field-meta.xml
<CustomField>
    <fullName>SMEConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SME Confirmed</label>
    <type>Checkbox</type>
</CustomField>