force-app/main/default/objects/Asset_Service__c/fields/SoftwareRevision__c.field-meta.xml
<CustomField>
    <fullName>SoftwareRevision__c</fullName>
    <label>Software revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>