force-app/main/default/objects/Asset_Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Follow Up 1</fullName>
            </value>
            <value>
                <fullName>Follow Up 2</fullName>
            </value>
            <value>
                <fullName>Follow Up 3</fullName>
            </value>
            <value>
                <fullName>Written Follow Up</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Unserviceable</fullName>
            </value>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>