force-app/main/default/objects/Asset_Service__c/fields/SystemErrorCodes__c.field-meta.xml
<CustomField>
    <fullName>SystemErrorCodes__c</fullName>
    <label>Test failure &amp; system error codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER01</fullName>
            </value>
            <value>
                <fullName>ER02</fullName>
            </value>
            <value>
                <fullName>ER03</fullName>
            </value>
            <value>
                <fullName>ER04</fullName>
            </value>
            <value>
                <fullName>ER05</fullName>
            </value>
            <value>
                <fullName>ER06</fullName>
            </value>
            <value>
                <fullName>ER10</fullName>
            </value>
            <value>
                <fullName>ER11</fullName>
            </value>
            <value>
                <fullName>ER12</fullName>
            </value>
            <value>
                <fullName>ER13</fullName>
            </value>
            <value>
                <fullName>ER30</fullName>
            </value>
            <value>
                <fullName>ER31</fullName>
            </value>
            <value>
                <fullName>ER32</fullName>
            </value>
            <value>
                <fullName>ER33</fullName>
            </value>
            <value>
                <fullName>ER40</fullName>
            </value>
            <value>
                <fullName>ER50</fullName>
            </value>
            <value>
                <fullName>ER51</fullName>
            </value>
            <value>
                <fullName>ER52</fullName>
            </value>
            <value>
                <fullName>ER60</fullName>
            </value>
            <value>
                <fullName>ER61</fullName>
            </value>
            <value>
                <fullName>ER62</fullName>
            </value>
            <value>
                <fullName>ER63</fullName>
            </value>
            <value>
                <fullName>ER64</fullName>
            </value>
            <value>
                <fullName>ER65</fullName>
            </value>
            <value>
                <fullName>ER70</fullName>
            </value>
            <value>
                <fullName>ER99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>