force-app/main/default/objects/Asset_Service__c/fields/TrackwiseID__c.field-meta.xml
<CustomField>
    <fullName>TrackwiseID__c</fullName>
    <label>Trackwise ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>