force-app/main/default/objects/Asset_Service__c/fields/UnderWarranty__c.field-meta.xml
<CustomField>
    <fullName>UnderWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Warranty</label>
    <type>Checkbox</type>
</CustomField>